2006-01-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/application.py:
	  Added instance variable "static_tooltips".

	* lib/gaupol/gtk/delegates/guiinit.py:
	  Use static_tooltips for open button.

2006-01-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialogs/filechooser.py:
	  (SaveDialog): Fixed overwrite confirmations by hooking up to the
	  "response" signal rather than using the built-in overwrite
	  confirming.

2006-01-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/output-window.glade:
	  New file.

	* data/glade/preferences-dialog.glade:
	  Removed "Save changed file before preview" check button.
	  Changed preview command format.

	* data/ui/menubar.xml:
	  Added "select_video_file", "toggle_output_window" and
	  "toggle_video_toolbar". Renamed toolbar to main_toolbar.

	* data/ui/toolbar.xml:
	  Renamed toolbar to main_toolbar.

	* lib/gaupol/base/delegates/filesave.py:
	  (FileSaveDelegate.save_main_file,
	  FileSaveDelegate.save_translation_file): Set changed values to zero
	  only if keep_changes is True.

	* lib/gaupol/base/delegates/preview.py:
	  Rewritten to save to temporary file before preview.

	* lib/gaupol/base/project.py:
	  New instance variables "video_path" and "output".

	* lib/gaupol/gtk/application.py:
	  New instance variables "video_file_button", "video_file_dialog" and
	  "output_window".

	* lib/gaupol/gtk/delegates/appupdate.py:
	  (ApplicationUpdateDelegate.on_video_filechooser_response): New
	  method.
	  (ApplicationUpdateDelegate._set_widget_states): Set video filechooser
	  button's state.

	* lib/gaupol/gtk/delegates/edit.py:
	  (EditDelegate._set_sensitivities): Adapt to new toolbar names and
	  counts.

	* lib/gaupol/gtk/delegates/fileclose.py:
	  (FileCloseDelegate.on_quit_activated): Save output window geometry.

	* lib/gaupol/gtk/delegates/fileopen.py:
	  (SelectVideoAction): New class.
	  (FileOpenDelegate.on_notebook_drag_data_received): Renamed from
	  "on_files_dropped".