@@ -19,10 +19,7 @@ Plans for 0.3.3
       [D] Open button on the main toolbar missing tooltip
 
     Other:
-      [?] Never use plural names in directory and file names
       [ ] Update web page screenshots
-
-    Run PyChecker!
 
 
 Plans for 0.4.0
